Prefer runtime access modules from the module path